# project-mobile

./: .gitignore  Dockerfile  Jenkinsfile  README.md  requiremens.txt  requirements.txt  sonar-project.properties
backend/: pyproject.toml  requirements.txt
backend/app/: deps.py  main.py  security.py
backend/app/models/: __init__.py  google_maps.py  groups.py  images.py  item_people.py  items.py  leaders.py  messages.py  people_group_links.py  peoples.py  request_people.py  users.py
backend/app/router/: __init__.py  google_maps.py  groups.py  images.py  item_activities.py  item_people.py  items.py  leaders.py  messages.py  peoples.py  users.py
backend/scripts/: api-run.bat
backend/tests/: authentication_test.py  conftest.py  test_item.py  user_test.py
fontend/plan/: .metadata  pubspec.yaml
frontend/: pubspec.yaml
frontend/frontend/: .metadata  pubspec.yaml
frontend/frontend/lib/: main.dart
frontend/lib/: main.dart
frontend/lib/bloc/: bloc.dart  bloc_event.dart  bloc_state.dart  export_bloc.dart
frontend/lib/components/: home.dart  login.dart
frontend/lib/login-register/: change_password.dart  creat_account.dart  create_account.dart  home.dart  login.dart
frontend/lib/models/: groups.dart  home.dart  itempeople.dart  joinrequest.dart  models.dart  person.dart  todo_item.dart  trip.dart  user.dart
frontend/lib/repositories/: auth_repository.dart  group_repository.dart  itempeople_repository.dart  join_request_repository.dart  people_repository.dart  profile_repository.dart  trip_repository.dart  user_repository.dart  websocket_repository.dart
(+72 files in other folders)
