[tool.poetry]
name = "plan"
version = "0.1.0"
description = ""
authors = ["6410110118 <6410110118@psu.ac.th>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlmodel = "^0.0.21"
bcrypt = "^4.2.0"
jwt = "^1.3.1"
pydantic-settings = "^2.4.0"
pg8000 = "^1.31.2"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
